prost-canonical-serde/tests/ui/transparent_on_field.stderr
error: unsupported prost_canonical_serde field attribute `transparent`
 --> tests/ui/transparent_on_field.rs:8:29
  |
8 |     #[prost_canonical_serde(transparent)]
  |                             ^^^^^^^^^^^
